docs/docs/src/content/docs/v1.0/guides/request-parameters.mdx
---
title: Request Parameters
description: Extract query, header, and cookie parameters in sillo handlers and dependencies
---

import { Aside } from '@astrojs/starlight/components';

#  Request Parameters

sillo provides a clean, declarative way to extract query parameters, HTTP headers, and cookies directly in your handlers and dependencies using `Query`, `Header`, and `Cookie` parameter extractors.

##  Quick Example

```python
from sillo import SilloApp, HttpContext, Query, Header, Cookie

app = SilloApp()

@app.get("/search")
async def search(
    ctx: HttpContext, response,
    q: str = Query(""),
    limit: int = Query(10),
    authorization: str = Header()
):
    return {"query": q, "limit": limit, "auth": authorization}
```

<Aside title="Looking for validation?">

This page covers extraction and the type coercion sillo infers from a default
value. For real validation (constraints, proper 422 responses,
`Path`/`Form`/`File` parameters, and response models) add a `type=` or a
constraint to any marker on this page and see the
[Validation](/v1.0/guides/validation/) section.

```python
page = Query(1, type=int, ge=1, le=100)   # validated, 422 on bad input
```

</Aside>

##  Query Parameters

Use `Query()` to extract query string parameters with automatic type conversion.

###  Basic Usage

```python
from sillo import HttpContext

@app.get("/items")
async def get_items(
    ctx: HttpContext, response,
    page: int = Query(1),
    limit: int = Query(10)
):
    return {"page": page, "limit": limit}
```

**Request:** `GET /items?page=2&limit=20`
**Result:** `{"page": 2, "limit": 20}`

###  With Defaults

```python
from sillo import HttpContext

@app.get("/search")
async def search(ctx: HttpContext, q: str = Query("default query")):
    return {"query": q}
```

**Request:** `GET /search`
**Result:** `{"query": "default query"}`

###  No Default

When no default is provided, the parameter returns `None` if not present:

```python
from sillo import HttpContext

@app.get("/filter")
async def filter(ctx: HttpContext, tag: str = Query()):
    return {"tag": tag}
```

###  Type Conversion

`Query()` automatically converts string values to the type of the default:

| Default Type | Conversion |
|--------------|------------|
| `int` | `int(value)` |
| `float` | `float(value)` |
| `bool` | `"true"/"1"/"yes"` → `True`, others → `False` |
| `list[str]` | Split by comma |
| `str` | No conversion |

```python
from sillo import HttpContext

@app.get("/convert")
async def convert(
    ctx: HttpContext, response,
    count: int = Query(0),
    price: float = Query(0.0),
    active: bool = Query(False)
):
    return {"count": count, "price": price, "active": active}
```

###  With Alias

Use `alias` to map a different query parameter name:

```python
from sillo import HttpContext

@app.get("/users")
async def users(ctx: HttpContext, page_num: int = Query(1, alias="page")):
    return {"page": page_num}
```

**Request:** `GET /users?page=5`
**Result:** `{"page": 5}`

###  Required Parameters

Use `required=True` to enforce presence:

```python
from sillo import HttpContext

@app.get("/search")
async def search(ctx: HttpContext, q: str = Query(required=True)):
    return {"query": q}
```

---

##  Header Parameters

Use `Header()` to extract HTTP headers with automatic name conversion.

###  Basic Usage

Header names are automatically converted from Python naming to HTTP canonical format:

| Parameter Name | Header Name |
|----------------|-------------|
| `authorization` | `Authorization` |
| `content_type` | `Content-Type` |
| `x_request_id` | `X-Request-Id` |
| `user_agent` | `User-Agent` |

```python
from sillo import HttpContext

@app.get("/api")
async def api(ctx: HttpContext, authorization: str = Header()):
    return {"auth": authorization}
```

**Request:** `GET /api` with header `Authorization: Bearer token123`
**Result:** `{"auth": "Bearer token123"}`

###  With Default

```python
from sillo import HttpContext

@app.get("/version")
async def version(ctx: HttpContext, api_key: str = Header(default="guest")):
    return {"api_key": api_key}
```

###  Custom Header Name

Use `alias` for non-standard or custom header names:

```python
from sillo import HttpContext

@app.get("/custom")
async def custom(ctx: HttpContext, token: str = Header(alias="X-API-Token")):
    return {"token": token}
```

**Request:** `GET /custom` with header `X-API-Token: secret123`
**Result:** `{"token": "secret123"}`

---

##  Cookie Parameters

Use `Cookie()` to extract cookie values.

###  Basic Usage

```python
from sillo import HttpContext

@app.get("/settings")
async def settings(ctx: HttpContext, theme: str = Cookie("light")):
    return {"theme": theme}
```

**Request:** `GET /settings` with cookie `theme=dark`
**Result:** `{"theme": "dark"}`

###  No Default

```python
from sillo import HttpContext

@app.get("/session")
async def session(ctx: HttpContext, session_id: str = Cookie()):
    return {"session": session_id}
```

---

##  Using in Nested Dependencies

Parameter extractors work seamlessly in nested dependencies, no need for
`Context`:

###  Query in Dependency

```python
from sillo import HttpContext

def get_pagination(page: int = Query(1), limit: int = Query(10)):
    return {"page": page, "limit": limit}

@app.get("/items")
async def get_items(
    ctx: HttpContext, response,
    pagination: dict = Depend(get_pagination)
):
    return {"items": [], "pagination": pagination}
```

**Request:** `GET /items?page=3&limit=25`
**Result:** `{"items": [], "pagination": {"page": 3, "limit": 25}}`

###  Header in Dependency

```python
from sillo import HttpContext

def get_auth(authorization: str = Header()):
    if not authorization:
        raise ValueError("No authorization")
    return {"token": authorization}

@app.get("/profile")
async def profile(ctx: HttpContext, auth: dict = Depend(get_auth)):
    return auth
```

###  Cookie in Dependency

```python
from sillo import HttpContext

def get_preferences(theme: str = Cookie("dark"), lang: str = Cookie("en")):
    return {"theme": theme, "language": lang}

@app.get("/settings")
async def settings(ctx: HttpContext, prefs: dict = Depend(get_preferences)):
    return prefs
```

###  Mixed Parameters in Dependency

```python
from sillo import HttpContext

def get_context(
    page: int = Query(1),
    authorization: str = Header(),
    theme: str = Cookie("dark")
):
    return {"page": page, "auth": authorization, "theme": theme}

@app.get("/dashboard")
async def dashboard(ctx: HttpContext, ctx: dict = Depend(get_context)):
    return ctx
```

---

##  Comparison: Parameters vs Context

sillo provides two ways to access request data in dependencies:

###  Using Parameters (Recommended)

```python
from sillo import HttpContext, Query, Header, Cookie, Depend

def get_user_data(
    page: int = Query(1),
    authorization: str = Header()
):
    return {"page": page, "token": authorization}

@app.get("/data")
async def get_data(ctx: HttpContext, data: dict = Depend(get_user_data)):
    return data
```

**Advantages:**
- Clean, declarative API
- Automatic type conversion
- Works with nested dependencies
- Self-documenting parameters

###  Reading the context directly

`Depend(get_context=True)` injects the active context into a dependency —
an `HttpContext` on an HTTP route, a `WebSocketContext` on a WebSocket route —
leaving the extraction to you:

```python
from sillo import Depend

def get_user_data(ctx: HttpContext = Depend(get_context=True)):
    page = ctx.query_params.get("page", "1")
    authorization = ctx.headers.get("Authorization")
    return {"page": page, "token": authorization}
```

A plain `ctx` parameter is **not** injected into a dependency — only
handlers get the context that way. Without `Depend(get_context=True)` it is
just an unfilled argument.

**Disadvantages:**
- Manual type conversion required
- More verbose
- Accessing request attributes directly

<Aside type="tip" title="Recommendation">

Use `Query`, `Header`, and `Cookie` parameter extractors in dependencies. They provide cleaner code, automatic type conversion, and better testability.

</Aside>

---

##  OpenAPI Integration

Parameters automatically appear in your OpenAPI documentation. sillo generates proper OpenAPI parameter objects with correct types, locations, and default values.

###  Example OpenAPI Output

Given this handler:

```python
from sillo import HttpContext

@app.get("/items")
async def get_items(
    ctx: HttpContext, response,
    page: int = Query(1),
    limit: int = Query(10),
    authorization: str = Header()
):
    return {"page": page}
```

The generated OpenAPI spec includes:

```json
{
  "/items": {
    "get": {
      "parameters": [
        {
          "name": "page",
          "in": "query",
          "schema": {"type": "integer", "default": 1},
          "required": false
        },
        {
          "name": "limit",
          "in": "query",
          "schema": {"type": "integer", "default": 10},
          "required": false
        },
        {
          "name": "Authorization",
          "in": "header",
          "schema": {"type": "string"},
          "required": true
        }
      ]
    }
  }
}
```

###  Features

- **Automatic type inference**: `int` → `integer`, `float` → `number`, `bool` → `boolean`, `str` → `string`
- **Header name conversion**: `authorization` → `Authorization`, `x_request_id` → `X-Request-Id`
- **Default values**: Included in schema for documentation
- **Required status**: Automatically determined from `required=True` or when no default is provided
- **Aliases**: Respected for custom parameter names

---

##  API Reference

###  Query(default=..., *, alias=None, required=False)

Extract query parameters.

| Parameter | Type | Description |
|-----------|------|-------------|
| `default` | Any | Default value if param not provided |
| `alias` | str | Custom query parameter name |
| `required` | bool | Raise error if param missing |

###  Header(default=..., *, alias=None, required=False)

Extract HTTP headers. Auto-converts parameter names to canonical header names.

| Parameter | Type | Description |
|-----------|------|-------------|
| `default` | Any | Default value if header not present |
| `alias` | str | Custom header name |
| `required` | bool | Raise error if header missing |

###  Cookie(default=..., *, alias=None, required=False)

Extract cookie values.

| Parameter | Type | Description |
|-----------|------|-------------|
| `default` | Any | Default value if cookie not present |
| `alias` | str | Custom cookie name |
| `required` | bool | Raise error if cookie missing |
